<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="co.temy.sceneform.MainActivity">

    <fragment android:name="com.google.ar.sceneform.ux.ArFragment"
              android:id="@+id/arFragmentView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:useDefaultMargins="true"
                android:columnCount="2"
                android:rowCount="2">
            <Button
                    android:id="@+id/colorButton"
                    tools:text="@string/color_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"/>
            <Button
                    android:id="@+id/metallicButton"
                    tools:text="@string/metallic_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"/>
            <Button
                    android:id="@+id/roughnessButton"
                    tools:text="@string/roughness_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"/>
            <Button
                    android:id="@+id/normalButton"
                    tools:text="@string/normal_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"/>
        </GridLayout>
        <Button
                android:id="@+id/resetMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_material_text"/>
    </LinearLayout>



</LinearLayout>